--- a/task0006/css/about.css
+++ b/task0006/css/about.css
@@ -57,14 +57,7 @@ div ul{
   list-style: none;
 }
 
-div span{
-  border: 0;
-  transition: right .5s ease;
-}
-div span:hover{
-  cursor: pointer;
-  border-bottom: 1px solid black;
-}
+
 nav div.logo , nav p.title{
   display: inline-block;
 
@@ -79,6 +72,20 @@ nav div.logo a{
   text-decoration: none;
 }
 
+div.about p.contact{
+  text-align: center;
+  font-size: 25px;
+  margin-top: 60px;
+}
+div.about p{
+  text-align: center;
+  font-size: 20px;
+  margin: 35px;
+}
+
+
+
+
 footer{
   background-color: transparent;
   text-align: center;
@@ -91,7 +98,6 @@ footer{
 footer p{
   display: inline;
 }
-
 footer p{
   color: rgba(230,230,230,0.4);
   transition: all 1s ease;
