--- a/task0006/css/all.css
+++ b/task0006/css/all.css
@@ -2,10 +2,17 @@
   margin: 0;
   padding: 0;
 }
+
+
+
+@media only screen and (max-width:1850px) {
+
+
 body{
-  background: grey;
-  background-size: 100%;
+  background: url(../images/6.png);
+
 }
+
 nav{
   width: 100%;
   position: fixed;
@@ -13,7 +20,7 @@ nav{
   line-height: 40px;
   display: table;
   text-align: center;
-  margin-top: 5px;
+  margin-top: 20px;
 
 }
 
@@ -23,7 +30,7 @@ nav a{
   margin: 10px 20px;
   font-size: 25px;
   text-decoration: none;
-  color: rgba(255,255,255,0.3);
+  color: rgba(193,205,193,0.3);
   transition: all 1s ease;
 }
 
@@ -31,29 +38,34 @@ nav a:hover{
   color: rgba(255,255,255,1);
 }
 
-/*div .container input{
+footer{
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  bottom: 5px;
+  font-size: 15px;
+  color: rgba(193,205,193,0.3);
+}
+
+footer p{
+  display: inline-block;
+  transition: all 1s ease;
+}
+
+footer p:hover{
+  color: rgba(255,255,255,1)
+}
+div.aboutme{
   display: none;
 }
 
-div .container img .small{
-  position: relative;
-  float: left;
-}
 
 
-div .container img .large{
-  width: 1300px;
-  position: absolute;
-  z-index: -1;
-  display: block;
-  top: 100px;
-
-}*/
 
 div.container{
   width: 200px;
   margin-left: 100px;
-  margin-top: 200px;
+  margin-top: 120px;
   margin-right: auto;
 }
 div.container input{
@@ -72,7 +84,7 @@ div.container img.small{
  margin:auto;
 }
 div.container img.large{
- margin-top: 200px;
+ margin-top: 120px;
  width:100%;
  transition:0.5s all ease-in;
  position:absolute;
@@ -80,9 +92,115 @@ div.container img.large{
  top:0;
  opacity:0;
  display:block;
- width: 1000px;
+ width: 1300px;
 }
 div.container input:nth-of-type(1):checked ~ .placeholder:nth-of-type(1) .large, div.container input:nth-of-type(2):checked ~ .placeholder:nth-of-type(2) .large, div.container input:nth-of-type(3):checked ~ .placeholder:nth-of-type(3) .large, div.container input:nth-of-type(4):checked ~ .placeholder:nth-of-type(4) .large{
  opacity:1;
  z-index:10;
+}
+
+
+}
+
+@media only screen and (min-width:1850px) {
+
+  body{
+    background: url(../images/6.png);
+
+  }
+
+  nav{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    line-height: 40px;
+    display: table;
+    text-align: center;
+    margin-top: 20px;
+
+  }
+
+  nav a{
+    background: transparent;
+    display: table-cell;
+    margin: 10px 20px;
+    font-size: 25px;
+    text-decoration: none;
+    color: rgba(193,205,193,0.3);
+    transition: all 1s ease;
+  }
+
+  nav a:hover{
+    color: rgba(255,255,255,1);
+  }
+
+  footer{
+    text-align: center;
+    width: 100%;
+    position: fixed;
+    bottom: 5px;
+    font-size: 15px;
+    color: rgba(193,205,193,0.3);
+  }
+
+  footer p{
+    display: inline-block;
+    transition: all 1s ease;
+  }
+
+  footer p:hover{
+    color: rgba(255,255,255,1)
+  }
+  div.aboutme{
+    display: relative;
+    float: right;
+    margin-right: 150px;
+    margin-top: 120px;
+    font-family: 'Trebuchet MS', Helvetica, sans-serif;
+    font-size: 20px;
+  }
+
+  div.aboutme p{
+    color: rgba(193,205,193,0.8);
+  }
+
+
+  div.container{
+    width: 200px;
+    margin-left: 100px;
+    margin-top: 200px;
+    margin-right: auto;
+  }
+  div.container input{
+   display:none;
+  }
+  div.container img.small{
+   width:100px;
+   position:relative;
+   bottom:0px;
+   float:bottom;
+   z-index:1000;
+   transition:0.5s all ease-in;
+   cursor:pointer;
+   padding:5px;
+   background:rgba(0,0,0,0.8);
+   margin:auto;
+  }
+  div.container img.large{
+   margin-top: 200px;
+   width:100%;
+   transition:0.5s all ease-in;
+   position:absolute;
+   z-index:-1;
+   top:0;
+   opacity:0;
+   display:block;
+   width: 1000px;
+  }
+  div.container input:nth-of-type(1):checked ~ .placeholder:nth-of-type(1) .large, div.container input:nth-of-type(2):checked ~ .placeholder:nth-of-type(2) .large, div.container input:nth-of-type(3):checked ~ .placeholder:nth-of-type(3) .large, div.container input:nth-of-type(4):checked ~ .placeholder:nth-of-type(4) .large{
+   opacity:1;
+   z-index:10;
+  }
+
+
 }
