--- a/task0006/css/about.css
+++ b/task0006/css/about.css
@@ -4,6 +4,7 @@
   bottom: 0
 }
 
+@media only screen and (min-width:1380px) {
 body{
   background: url(../images/2.png);
 }
@@ -83,7 +84,11 @@ div.about p{
   margin: 35px;
 }
 
-
+div.about a{
+  text-decoration:none;
+  color:rgba(0,0,0,0.6);
+  
+}
 
 
 footer{
@@ -105,4 +110,134 @@ footer p{
 
 footer p:hover{
   color: rgba(255,255,255,0.8);
+}
+
+}
+@media only screen and (max-width:1380px) {
+  body{
+    background: url(../images/6.png);
+
+  }
+  nav{
+    position: fixed;
+    top:0;
+    display: table;
+    line-height: 25px;
+    width: 100%;
+
+
+  }
+
+  nav div.logo{
+    position: fixed;
+    margin-left: 0;
+    top:-30px;
+    display: table-cell;
+
+  }
+
+
+  nav ul {
+    list-style: none;
+    margin-top: 18px;
+    margin-left: 80px;
+
+  }
+  nav ul li{
+    list-style: none;
+  }
+  nav ul li{
+    display: table-cell;
+
+  }
+  nav li a{
+    font-size: 25px;
+    text-decoration: none;
+    margin-right: 100px ;
+
+
+  }
+  nav  li a{
+    position: relative;
+    color: rgba(255,255,255,0.3);
+    transition: all 1s ease;
+    text-decoration: none;
+  }
+
+
+  nav ul a:hover{
+    color: rgba(1255,255,255,1);
+
+  }
+  nav li .selected{
+    color: rgba(255,255,255,1);
+
+  }
+  ul a.selected::before,a.selected::after,a.selected:hover::before,a.selected:hover::after{
+    display: none;
+  }
+  ul a::before,a::after{
+    position: absolute;
+    transition: all .5s ease;
+
+  }
+  ul a::before{
+    content: "\5B";
+    left: -15px;
+  }
+  ul a::after{
+    content: "\5D";
+    right: 18px;
+  }
+  ul a:hover::before,a:hover::after{
+    position: absolute;
+  }
+  ul a:hover::before {
+  content: "\5B";
+  left: -40px;
+  }
+  ul a:hover::after {
+  content: "\5D";
+  right: -15px;
+  }
+
+div.about p.contact{
+  text-align: center;
+  font-size: 25px;
+  margin-top: 100px;
+}
+div.about p{
+  text-align: center;
+  font-size: 20px;
+  margin: 35px;
+  color:rgba(253,253,253,0.8);
+}
+
+div.about a{
+    text-decoration:none;
+    color:rgba(233,233,233,0.6);
+    
+}
+footer{
+    position:fixed;
+    bottom:0;
+    width:100%;
+    background-color: transparent;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+  }
+  footer p{
+    display: inline;
+  }
+
+  footer p{
+    color: rgba(231,231,231,0.4);
+    transition: all 1s ease;
+  }
+
+  footer p:hover{
+    color: rgba(251,251,251,0.8);
+  }
+
 }
