--- a/task0006/css/shouye.css
+++ b/task0006/css/shouye.css
@@ -4,6 +4,9 @@
   bottom: 0
 }
 
+@media only screen and (min-width:1380px) {
+
+
 body{
   background: url(../images/2.png);
 }
@@ -50,21 +53,14 @@ nav .title{
 
 }
 div{
-  margin-left: 280px;
+  margin-left: 400px;
 }
 
-div ul{
+nav div ul{
   list-style: none;
 }
 
-div span{
-  border: 0;
-  transition: right .5s ease;
-}
-div span:hover{
-  cursor: pointer;
-  border-bottom: 1px solid black;
-}
+
 nav div.logo , nav p.title{
   display: inline-block;
 
@@ -78,6 +74,113 @@ nav div.logo{
 nav div.logo a{
   text-decoration: none;
 }
+
+
+*, *:after, *:before {
+	box-sizing: border-box;
+}
+.thumbnail {
+	-webkit-backface-visibility: hidden;
+	position: relative;
+	margin: 30px  ;
+	overflow: hidden;
+	box-shadow: 0 15px 50px rgba(0,0,0,.7);
+}
+.thumbnail img {
+	display: block;
+	max-width: 100%;
+	transition: opacity .2s ease-in-out;
+}
+.thumbnail:hover img {
+	opacity: 0.7;
+}
+.thumbnail::after {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 50%;
+	transition: transform .4s ease-out;
+	color: #fff;
+}
+.thumbnail::before{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 42%;
+  transition: transform .4s ease-out;
+  color: #fff;
+}
+.thumbnail::after {
+	content: attr(data-title);
+	top: 0;
+	padding-top: 55px;
+	transform: translateY(-100%) scale(.8);
+	background: rgba(0,0,0,.4);
+	font-size: 3rem;
+	font-weight: 300;
+	font-family: Merriweather, serif;
+	text-align: center;
+}
+.thumbnail::before {
+	content: attr(data-description) "…";
+	top: 50%;
+	padding: 20px;
+	transform: translateY(120%) scale(.8);
+	background: rgba(107,38,68,.6);
+	-webkit-backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
+	color: #f1f1f1;
+	font-size: 1rem;
+}
+.thumbnail:hover::after,
+.thumbnail:hover::before {
+	transform: translateY(0%) scale(1);
+}
+
+
+.container{
+
+  display: -webkit-flex;
+  display: flex;
+}
+
+.container{
+  flex-direction: row;
+  flex-wrap: wrap;
+  /*flex-flow: row wrap;*/
+  justify-content: flex-start;
+  align-items: flex-end;
+  margin-right: 80px;
+}
+
+
+.thumbnail p{
+  width: 100%;
+  text-align: center;
+  font-size: 1.3rem;
+}
+.thumbnail p a{
+  text-decoration: none;
+  transition: all .5s ease;
+  color: rgba(25,25,25,0.3);
+
+}
+
+.thumbnail a:hover{
+  color: rgba(25,25,25,0.8);
+
+}
+
+.thumbnail a:active{
+  color: coral;
+
+}
+
+
+
+
+
+
 
 footer{
   background-color: transparent;
@@ -99,4 +202,231 @@ footer p{
 
 footer p:hover{
   color: rgba(255,255,255,0.8);
+}
+
+
+}
+
+@media only screen and (max-width:1380px) {
+  body{
+    background: url(../images/6.png);
+
+  }
+  nav{
+    position: fixed;
+    top:0;
+    display: table;
+    line-height: 25px;
+    width: 100%;
+
+
+  }
+
+  nav div.logo{
+    position: fixed;
+    margin-left: 0;
+    top:-30px;
+    display: table-cell;
+
+  }
+
+
+  nav ul {
+    list-style: none;
+    margin-top: 18px;
+    margin-left: 80px;
+
+  }
+  nav ul li{
+    list-style: none;
+  }
+  nav ul li{
+    display: table-cell;
+    margin-right: 200px;
+  }
+  nav li a{
+    font-size: 25px;
+    text-decoration: none;
+    margin-right: 100px ;
+
+
+  }
+  nav  li a{
+    position: relative;
+    color: rgba(255,255,255,0.3);
+    transition: all 1s ease;
+    text-decoration: none;
+  }
+
+
+  nav ul a:hover{
+    color: rgba(1255,255,255,1);
+
+  }
+  nav li .selected{
+    color: rgba(255,255,255,1);
+
+  }
+  ul a.selected::before,a.selected::after,a.selected:hover::before,a.selected:hover::after{
+    display: none;
+  }
+  ul a::before,a::after{
+    position: absolute;
+    transition: all .5s ease;
+
+  }
+  ul a::before{
+    content: "\5B";
+    left: -15px;
+  }
+  ul a::after{
+    content: "\5D";
+    right: 18px;
+  }
+  ul a:hover::before,a:hover::after{
+    position: absolute;
+  }
+  ul a:hover::before {
+  content: "\5B";
+  left: -40px;
+  }
+  ul a:hover::after {
+  content: "\5D";
+  right: -15px;
+  }
+
+
+
+  div{
+    margin-left: 60px;
+    margin-top: 40px;
+  }
+  *, *:after, *:before {
+  	box-sizing: border-box;
+  }
+  .thumbnail {
+  	-webkit-backface-visibility: hidden;
+  	position: relative;
+  	margin: 30px  ;
+  	overflow: hidden;
+  	box-shadow: 0 15px 50px rgba(0,0,0,.7);
+  }
+  .thumbnail img {
+  	display: block;
+  	max-width: 100%;
+    width: 250px;
+  	transition: opacity .2s ease-in-out;
+  }
+  .thumbnail:hover img {
+  	opacity: 0.7;
+  }
+  .thumbnail::after {
+  	position: absolute;
+  	z-index: 1;
+  	width: 100%;
+  	height: 50%;
+  	transition: transform .4s ease-out;
+  	color: #fff;
+  }
+  .thumbnail::before{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 39%;
+    transition: transform .4s ease-out;
+    color: #fff;
+  }
+  .thumbnail::after {
+  	content: attr(data-title);
+  	top: 0;
+  	padding-top: 55px;
+  	transform: translateY(-100%) scale(.8);
+  	background: rgba(0,0,0,.4);
+  	font-size: 3rem;
+  	font-weight: 300;
+  	font-family: Merriweather, serif;
+  	text-align: center;
+  }
+  .thumbnail::before {
+  	content: attr(data-description) "…";
+  	top: 50%;
+  	padding: 20px;
+  	transform: translateY(120%) scale(.8);
+  	background: rgba(107,38,68,.6);
+  	-webkit-backdrop-filter: blur(10px);
+  	backdrop-filter: blur(10px);
+  	color: #f1f1f1;
+  	font-size: 1rem;
+  }
+  .thumbnail:hover::after,
+  .thumbnail:hover::before {
+  	transform: translateY(0%) scale(1);
+  }
+
+
+  .container{
+
+    display: -webkit-flex;
+    display: flex;
+  }
+
+  .container{
+    flex-direction: row;
+    flex-wrap: wrap;
+    /*flex-flow: row wrap;*/
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin-right: 80px;
+  }
+
+
+  .thumbnail p{
+    margin-top: 15px;
+    width: 100%;
+    text-align: center;
+    font-size: 1.3rem;
+  }
+  .thumbnail p a{
+    text-decoration: none;
+    transition: all .5s ease;
+    color: rgba(251,251,251,0.3);
+
+  }
+
+  .thumbnail a:hover{
+    color: rgba(255,255,255,0.8);
+
+  }
+
+  .thumbnail a:active{
+    color: coral;
+
+  }
+
+
+
+
+
+
+
+  footer{
+    width:100%;
+    background-color: transparent;
+    text-align: center;
+    font-size: 15px;
+    padding: 10px;
+  }
+  footer p{
+    display: inline;
+  }
+
+  footer p{
+    color: rgba(231,231,231,0.4);
+    transition: all 1s ease;
+  }
+
+  footer p:hover{
+    color: rgba(251,251,251,0.8);
+  }
+
 }
